--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "test": "exit 1"
   },
   "dependencies": {
-    "express": "^4.12.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
     "cookie-parser": "^1.3.4",
+    "ejs": "^2.3.1",
+    "ejs-locals": "^1.0.2",
+    "express": "^4.12.2",
     "express-session": "^1.10.3",
     "morgan": "^1.5.1",
-    "bcrypt-nodejs": "0.0.3",
     "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "ejs": "^2.3.1",
-    "ejs-locals": "^1.0.2"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {}
 }
