--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "node server.js",
-    "test": "exit 1"
+    "start": "node app.js",
+    "test": "nodeunit test/*.test.js --reporter=verbose"
   },
+  "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
@@ -21,5 +22,8 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodeunit": "^0.9.1",
+    "request": "^2.53.0"
+  }
 }
