--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "version": "0.0.0",
   "scripts": {
     "start": "node app.js",
-    "test": "nodeunit test/*.test.js --reporter=verbose"
+    "test": "nodeunit test/*.test.js --reporter=verbose",
+    "coverage": "jscoverage server && LINKR_COV=1 nodeunit --reporter=lcov test/*.test.js",
+    "coveralls": "npm run coverage | coveralls"
   },
-  "main": "server.js",
+  "main": "server",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
@@ -23,6 +25,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "jscoverage": "^0.5.9",
     "nodeunit": "^0.9.1",
     "request": "^2.53.0"
   }
