--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0"
+    "icebreaker": "~0.4.0"
   }
 }
