--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "helmet": "^0.7.0",
     "morgan": "^1.5.1",
     "passport": "^0.2.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^4.3.0"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
