--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "icebreaker": "~0.4.0"
+    "icebreaker": "~0.4.0",
+    "linkr-components": "git@github.com:clux/linkr-components.git"
   }
 }
