--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "morgan": "^1.5.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "pg": "^4.3.0"
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.1.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
