--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: node_js
 node_js:
   - 0.10
 
+addons:
+  postgresql: "9.3"
+
+before_script:
+  - psql -c 'create database travis-linkr;' -U postgres
+  - export DATABASE_URL=postgres://postgres@localhost:5432/travis-linkr
+
 notifications:
   email: true
 
