--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
 before_script:
   - psql -c 'create database travis_linkr;' -U postgres
   - export DATABASE_URL=postgres://postgres@localhost:5432/travis_linkr
+  - npm run build
 
 notifications:
   email: true
