--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
   "name": "linkr-app",
+  "description": "Experiments with koa",
   "author": "Eirik Albrigtsen <analsandblaster@gmail.com>",
-  "description": "Link sharing express server with web components",
   "private": true,
+  "version": "0.0.0",
   "repository": {
     "type": "git",
     "url": "clux/linkr-app"
   },
-  "version": "0.0.0",
+  "main": "server/index.js",
   "scripts": {
     "build-wc": "./build.sh",
     "build-db": "./init_db.js",
     "build": "npm run build-wc && npm run build-db",
     "start": "node app.js",
-    "test": "nodeunit test/*.test.js --reporter=verbose",
-    "coverage": "jscoverage server && LINKR_COV=1 nodeunit --reporter=lcov test/*.test.js",
-    "coveralls": "npm run coverage | coveralls"
+    "test": "tape test/*.test.js",
+    "precoverage": "istanbul instrument server -o server-cov",
+    "coverage": "istanbul cover test/*.test.js && cat coverage/lcov.info",
+    "coveralls": "npm run coverage && cat coverage/lcov.info | coveralls"
   },
-  "main": "server",
   "dependencies": {
-    "bcrypt": "^0.8.3",
-    "body-parser": "^1.12.0",
-    "cookie-parser": "^1.3.4",
-    "ejs": "^2.3.1",
-    "ejs-locals": "^1.0.2",
-    "express": "^4.12.2",
-    "express-session": "^1.10.3",
-    "helmet": "^0.9.1",
-    "morgan": "^1.5.1",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "pg": "^4.3.0",
+    "co-bcrypt": "^1.0.0",
+    "co-body": "^2.0.0",
+    "co-views": "^1.0.0",
+    "koa": "^0.21.0",
+    "koa-jwt": "^1.1.0",
+    "koa-logger": "^1.2.2",
+    "koa-mount": "^1.3.0",
+    "koa-route": "^2.4.1",
+    "koa-static": "^1.4.9",
+    "pg": "^4.4.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.1.1"
+    "sequelize": "^3.2.0",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
+    "co": "^4.5.4",
+    "co-request": "^0.2.1",
     "coveralls": "^2.11.2",
+    "istanbul-harmony": "^0.3.12",
     "jscoverage": "^0.5.9",
     "nodeunit": "^0.9.1",
-    "request": "^2.53.0",
+    "request": "^2.57.0",
+    "tape": "^4.0.0",
     "vulcanize": "^1.8.1"
   }
 }
