--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - openssl genrsa -out server.rsa 2048
   - openssl rsa -in server.rsa -pubout > server.rsa.pub
   - psql -c 'create database travis_linkr;' -U postgres
-  - export DATABASE_URL=postgres://postgres@localhost:5432/travis_koa
+  - export DATABASE_URL=postgres://postgres@localhost:5432/travis_linkr
   - npm install bower -g
   - bower install
   - npm run build
