--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
+    "bandage": "^0.1.0",
     "co": "^4.5.4",
     "co-request": "^0.2.1",
-    "co-stream": "^0.1.0",
     "coveralls": "^2.11.2",
     "istanbul-harmony": "^0.3.12",
-    "tape": "^4.0.0",
     "vulcanize": "^1.8.1"
   }
 }
