use a makefile for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - export DATABASE_URL=postgres://postgres@localhost:5432/travis_linkr
   - npm install bower -g
   - bower install
-  - npm run build
+  - npm run init
 
 after_script:
   - npm run coveralls
