--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "icebreaker": "~0.4.1",
+    "icebreaker": "clux/icebreaker#~0.4.2",
     "linkr-components": "clux/linkr-components",
-    "deus-login": "clux/deus-login#~0.6.0"
+    "deus-login": "clux/deus-login#~0.6.3"
   }
 }
