--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,17 @@ node_js:
 addons:
   postgresql: "9.4"
 
+before_install:
+  - npm install node-gyp-install -g
+  - node-gyp-install
+
 before_script:
   - openssl genrsa -out server.rsa 2048
   - openssl rsa -in server.rsa -pubout > server.rsa.pub
   - psql -c 'create database travis_linkr;' -U postgres
   - export DATABASE_URL=postgres://postgres@localhost:5432/travis_linkr
-  - npm install bower node-gyp-install -g
+  - npm install bower -g
   - bower install
-  - node-gyp-install
   - npm run init
 
 after_script:
