--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "test": "echo not yet && exit 1"
   },
   "dependencies": {
+    "form-serialize": "^0.6.0",
     "page": "^1.6.3"
   },
   "devDependencies": {}
