--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,14 @@ sudo: false
 addons:
   postgresql: "9.4"
 
+notifications:
+  email: false
+
 before_install:
   - npm install -g npm
   - npm config set loglevel info
+  - npm install -g node-gyp-install
+  - node-gyp-install -v v4.0.0
 
 before_script:
   - openssl genrsa -out server.rsa 2048
