--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ notifications:
 before_install:
   - npm install -g npm
   - npm config set loglevel info
+  - npm install -g node-gyp
   - npm install -g node-gyp-install
   - node-gyp-install -v v4.0.0
 
