--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,20 @@ node_js:
   - "4.1"
 
 sudo: false
+
+env:
+  - CXX=g++-4.8
+
 addons:
   postgresql: "9.4"
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
 
 notifications:
   email: false
-
-before_install:
-  - npm install -g npm
-  - npm config set loglevel info
 
 before_script:
   - openssl genrsa -out server.rsa 2048
