--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "co-bcrypt": "^1.0.0",
     "co-body": "^4.0.0",
     "co-views": "^2.0.0",
-    "koa": "^0.21.0",
+    "koa": "^1.1.2",
     "koa-jwt": "^1.1.0",
     "koa-logger": "^1.2.2",
     "koa-mount": "^1.3.0",
@@ -35,6 +35,7 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
+    "autoprefixer-stylus": "^0.8.1",
     "bandage": "^0.2.1",
     "browserify": "^11.0.1",
     "co": "^4.5.4",
@@ -42,6 +43,7 @@
     "co-request": "^1.0.0",
     "istanbul": "^0.4.0",
     "json": "^9.0.3",
+    "stylus": "^0.52.4",
     "uglify-js": "^2.6.0",
     "vulcanize": "^1.8.1"
   }
