--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "linkr-app",
   "description": "Experiments with koa",
-  "author": "Eirik Albrigtsen <analsandblaster@gmail.com>",
+  "author": "Eirik Albrigtsen <sszynrae@gmail.com>",
   "private": true,
   "version": "0.0.0",
   "repository": {
